kubernetes/apps/finance/firefly-iii-importer/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-iii-importer
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Firefly III Data Importer"
    gethomepage.dev/description: "Bank CSV/API import tool for Firefly III"
    gethomepage.dev/group: "Finance"
    gethomepage.dev/icon: "mdi-database-import"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "firefly-importer.${DOMAIN_CLUSTER}"
  rules:
    - backendRefs:
        - name: firefly-iii-importer
          port: 8080
